# case3

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
case_3/case_3/: asgi.py  settings.py  urls.py  wsgi.py
case_3/greetings/: forms.py  models.py  urls.py  views.py
case_3/greetings/migrations/: 0001_initial.py
case_3/greetings/static/css/: styles.css
case_3/greetings/templates/greetings/: index.html  submit.html
