[project]
name = "greetings"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "leon.express@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-admin (>=2.0.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
